_sass/nova.scss
/*
NOVA custom css
Author: Shadowfacts
*/

.nova-nav {
	background-color: #FFFFFF;
	border-style: solid;
	border-bottom: thick solid #E6E6E6;
}

.nova-header {
	padding-top: 200px;
	padding-bottom: 100px;
	margin-bottom: 0px;
}

.nova-desc {
	font-size: 25px;
}

.nova-slider {
	margin-top: 20px;

	.slick-slide {
		height: 200px;

		margin: 0 20px;
		padding: 10px;

		background-color: #FAFAFA;

		border-color: #E7E7E7;
		border-style: solid;
		border-width: 2px;

		-webkit-transform:	scale(0.85, 0.85);
		-moz-transform:		scale(0.85, 0.85);
		-ms-transform:		scale(0.85, 0.85);
		-o-transform:		scale(0.85, 0.85);
		transform:			scale(0.85, 0.85);

		-webkit-transition: 250ms ease-in-out;
		-moz-transition: 250ms ease-in-out;
		-o-transition: 250ms ease-in-out;
		transition: 250ms ease-in-out;

		&.slick-center {
			-webkit-transform:	scale(1, 1);
			-moz-transform:		scale(1, 1);
			-ms-transform:		scale(1, 1);
			-o-transform:		scale(1, 1);
			transform:			scale(1, 1);
		}

		p {
			text-align: center;
			font-weight: 200;
		}
	}
}

@media (max-width: 350px) {
  .slick-slide {
    height: 275px !important;
  }
}

// @media (max-width: )

.nova-slider-controls {
	width: 50%;

	margin-top: 25px;

	margin-left: auto;
	margin-right: auto;
	
	a {
		font-size: 32px;

		&.left {
			float: left;
		}

		&.right {
			float: right;
		}

		&:hover {
			color: #000;
		}
	}
}

.nova-downloads {
	margin-bottom: 0px;

	background-color: #fafafa;

	.nova-core {
		color: #2C3E50;
	}

	.nova-title {
		color: #555;
	}
}

.nova-dl-main {
	display: inline-block !important;
	padding: 3px 20px 3px 20px !important;
}

.nova-bumper {
	padding-top: 64px;
}

.nova-link {
	color: #18BC9C !important;
}

.nova-dropdown-menu {
	text-align: left;
}

